compiler/testData/diagnostics/tests/duplicateJvmSignature/specialNames/classObjectCopiedFieldObject.kt
class C {
    <!REDECLARATION!>class object<!> {
        val <!REDECLARATION!>Default<!> = this
    }

    val <!REDECLARATION!>Default<!> = C
}